# CDS-Refact

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: attribute_mapping.yaml  classifications_config.yaml  config.yaml
configs/: attribute_mapping.yaml  valid_attributes_6_19_25.yaml
configs/schemas/: standard_object_schema_v1.5.json
data/1_raw/: facility_objects.json  source_objects.json
data/1_raw/input/: 12345678-abcd-efgh-ijkl-mnopqrstuvwx.json  12345678-abcd-efgh-ijkl-mnopqrstuvwy.json  12345678-abcd-efgh-ijkl-mnopqrstwerwwe.json  23456789-aaaa-bbbb-nnnn-nopqrstuvwxy.json  23456789-bcde-fghi-jklm-nopqrstuvwxy.json  34567890-cdef-ghij-klmn-opqrstuvwxyz.json  59a4e7ed-778c-4b5f-824b-521fca1b9ba7.json  76276379-bcde-fghi-jklm-nopqrstuvwxy.json  87654321-dcba-hgfe-lkji-xwvutsrqponm.json  8ce21169-14a4-4a8b-a6ef-e177b1b10e5c.json  99b3d2c7-8e5d-4c64-97a4-102dfd93d7e9.json  (+3 more)
notebooks/: detect_attribute_name_change.ipynb  oms_pipeline.ipynb  oms_pipeline_flow.ipynb  oms_pipeline_main.ipynb  parse_location.ipynb  preprocessor.ipynb  validate_classifications.ipynb  validate_objects.ipynb  validate_source_objects.ipynb  validate_standard_objects.ipynb
schemas/: standard_object_schema_v1.4.json
src/extract/: json_extractor.py  object_extractor.py
src/load/: configs_loader.py  json_writer.py  load_attribute_map.py
src/pipelines/: oms_data_pipeline.py
src/transform/: classif_restrictor.py  data_parsing.py  object_parser.py  preprocessor.py  schema_validation.py
src/utils/: attribute_drift_detector.py  config_loader.py  logger.py  validater.py
(+27 files in other folders)
